--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,28 +19,31 @@ build:
 
 requirements:
   host:
-    - python >=3.6
     - pip
+    - python >=3.8
   run:
-    - python >=3.6
+    - python >=3.8
 
 test:
   source_files:
     - src/py/test
     - src/specification.yml
   requires:
+    - coverage
     - freezegun
     - hypothesis
-    - nose
-    - pyyaml
-    - python-dateutil
     - pep8
     - pip
+    - pytest
+    - python-dateutil
+    - pyyaml
   imports:
     - jsone
   commands:
-    - python -m pip check
-    - cd src/py/test && nosetests
+    - pip check
+    - cd src/py/test 
+    - coverage run --source=jsone --branch -m pytest -vv --color=yes --tb=long
+    - coverage report --show-missing --skip-covered --fail-under=100
 
 about:
   home: https://json-e.js.org
