build system, pip args

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,12 +15,13 @@ source:
 build:
   noarch: python
   number: 0
-  script: cd dist && {{ PYTHON }} -m pip install . --no-deps
+  script: cd dist && {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   host:
     - pip
     - python >=3.8
+    - setuptools
   run:
     - python >=3.8
 
